CI/CD e ajustes

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,14 +2,25 @@ server {
   listen 80;
   server_name localhost;
 
+  # Servir os arquivos estáticos do frontend
   location / {
     root   /usr/share/nginx/html;
     try_files $uri $uri/ /index.html;
   }
 
+  # Proxy para a API do backend
+  location /api/ {
+    proxy_pass http://backend:8080;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
 
-  location /shorten {
-    proxy_pass http://backend:8080/shorten;
+  # Proxy para as URLs encurtadas (ex: /AbCdEfG)
+  # Isso redireciona qualquer caminho curto sem extensão de arquivo para o backend
+    location ~ "^/[a-zA-Z0-9_-]{8}$" {
+    proxy_pass http://backend:8080;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
