--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend
 
-spring.data.redis.host=redis
+spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.timeout=60000
 spring.data.redis.connect-timeout=5000
