--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,9 +29,10 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-vitest": "^0.5.4",
     "jsdom": "^24.1.0",
     "msw": "^2.3.1",
-    "vite": "^5.3.1",
-    "vitest": "^1.6.0"
+    "vite": "^7.0.4",
+    "vitest": "^3.2.4"
   }
 }
